--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,4 +1,4 @@
----
+
 layout: default
 title: Home
 ---
@@ -26,7 +26,9 @@ title: Home
 
                     <!-- Landing page Title -->
                     <div class="column is-5 landing-caption">
-                        <h1 class="title is-1 is-light is-semibold is-spaced main-title">Cryptocurrency Exchange Market</h1>
+                        <h1 class="title is-1 is-light is-semibold is-spaced main-title">nft marketplace
+
+                        </h1>
                         <h2 class="subtitle is-5 is-light is-thin">
                             Cryptocurrency brought to the next level. Join our ICO for supercharged rates.
                         </h2>
