--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -30,7 +30,7 @@ title: Home
 
                         </h1>
                         <h2 class="subtitle is-5 is-light is-thin">
-                            Cryptocurrency brought to the next level. Join our ICO for supercharged rates.
+                         doar to metaverse. Join our ICO for supercharged rates.
                         </h2>
                         <!-- CTA -->
                         <p class="buttons">
