--- a/src/pages/token.html
+++ b/src/pages/token.html
@@ -140,7 +140,7 @@ title: Token
                                 <div class="document-block has-text-centered">
                                     <img src="/img/icons/techpaper.svg">
                                     <a href="start" class="button k-button k-primary raised has-gradient is-bold">
-                                        <span class="text">Techpaper</span>
+                                        <span class="text">nfts market</span>
                                         <span class="front-gradient"></span>
                                     </a>
                                 </div>
