changing to knite f3TOKEN

--- a/src/pages/token.html
+++ b/src/pages/token.html
@@ -173,9 +173,9 @@ title: Token
                     <div class="column is-4">
                         <div class="details-title">ICO structure</div>
                         <ul>
-                            <li>Maximum token amount: 24 000 000</li>
+                            <li>Maximum token amount: 1000000000</li>
                             <li>Tokens for sale: 18 000 000</li>
-                            <li>Token: KPT</li>
+                            <li>Token: F3K</li>
                             <li>Target amount: $25 000 000</li>
                             <li>Token price: from $0.5 to $1.2</li>
                             <li>Know Your Customer (KYC): No</li>
@@ -184,15 +184,15 @@ title: Token
                     <div class="column is-4">
                         <div class="details-title">Pre ICO</div>
                         <ul>
-                            <li>Maximum token amount: 24 000 000</li>
+                            <li>Maximum token amount: 1000000000</li>
                             <li>Tokens for sale: 18 000 000</li>
-                            <li>Token: KPT</li>
+                            <li>Token: F3K</li>
                         </ul>
                         <div class="details-title">ICO</div>
                         <ul>
-                            <li>Maximum token amount: 24 000 000</li>
+                            <li>Maximum token amount: 10000000000</li>
                             <li>Tokens for sale: 18 000 000</li>
-                            <li>Token: KPT</li>
+                            <li>Token: F3K</li>
                         </ul>
                     </div>
                     <div class="column is-4">
@@ -200,7 +200,7 @@ title: Token
                         <ul>
                             <li>Maximum token amount: 24 000 000</li>
                             <li>Tokens for sale: 18 000 000</li>
-                            <li>Token: KPT</li>
+                            <li>Token: F3K</li>
                         </ul>
                     </div>
                 </div>
