--- a/src/pages/blog-single.html
+++ b/src/pages/blog-single.html
@@ -31,7 +31,8 @@ title: Media
                                 <img src="/img/team/sandra.jpg" alt="">
                             </div>
                             <div class="author-name">
-                                <span>by Sandra Bernard</span>
+                                <span>by RAKESH PALLATTH
+                                </span>
                                 <span><small>in</small> Cryptomining<small>, March 28th</small></span>
                             </div>
                         </div>
