--- a/src/pages/blog-single.html
+++ b/src/pages/blog-single.html
@@ -326,7 +326,7 @@ title: Media
                             </div>
 
                             <div class="recent-post">
-                                <img src="/img/team/john.jpg">
+                                <img src="/img/team/sara.svg">
                                 <div class="meta">
                                     <a href="#">Blockchain for Dummies</a>
                                     <span>by John Cambell</span>
