--- a/src/pages/ico.html
+++ b/src/pages/ico.html
@@ -85,7 +85,7 @@ title: Home
                         <!-- Button -->
                         <div class="button-block">
                             <a href="#" class="button k-button k-secondary raised has-gradient is-bold is-fullwidth rounded">
-                                <span class="text">Register for ICO</span>
+                                <span class="text">NFTS MARKET for ICO</span>
                                 <span class="front-gradient"></span>
                             </a>
                         </div>
