--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -188,9 +188,9 @@ title: Home
                     <div class="column is-5">
                         <div class="side-feature-content">
 
-                            <h3 class="title is-4 is-light"><img src="/img/icons/ico/bitnetwork.svg" alt=""> <span>Cascading Blockchain</span></h3>
+                            <h3 class="title is-4 is-light"><img src="/img/icons/ico/bitnetwork.svg" alt=""> <span>what is nfts</span></h3>
                             <div class="divider is-long"></div>
-                            <p class="is-light">Viderer malorum sadipscing cum ei. Eu impetus perfecto sit, no sea labore detraxit. Primis mediocrem necessitatibus an vis. Eu impetus perfecto sit, no sea labore detraxit.</p>
+                            <p class="is-light">A non-fungible token is a non-interchangeable unit of data stored on a blockchain, a form of digital ledger, that can be sold and traded. Types of NFT data units may be associated with digital files such as photos, videos, and audio..</p>
                             <div class="cta-wrapper">
                                 <a href="#" class="button k-button k-primary raised has-gradient is-bold">
                                     <span class="text">Whitepaper</span>
